# linux

./: MAINTAINERS  Makefile  README.md  memtis.patch
arch/x86/: Kconfig
drivers/dax/: device.c
drivers/virtio/: virtio.c  virtio_balloon.c
fs/: userfaultfd.c
include/linux/: htmm.h  memcontrol.h  mempolicy.h  min_heap.h  mm.h  mmzone.h  node.h  nodemask.h  page-flags.h  perf_event.h  stddef.h  types.h  userfaultfd_k.h  vm_event_item.h
kernel/: sysctl.c
kernel/cgroup/: cgroup.c
kernel/events/: core.c
kernel/sched/: core.c  fair.c  sched.h
mm/: Kconfig  Makefile  folio-compat.c  gup.c  htmm_core.c  htmm_migrater.c  htmm_sampler.c  huge_memory.c  hugetlb.c  internal.h  khugepaged.c  memcontrol.c  memory.c  mempolicy.c  migrate.c  mprotect.c  page_alloc.c  pagewalk.c  rmap.c  show_mem.c  swap.c  userfaultfd.c  vmscan.c  vmstat.c
mm/hagent/: Kconfig  Makefile  balloon.c  event.rs  hagent.h  hagent.rs  hash.rs  helper.c  helper.rs  hook.c  hook.h  hooked.c  hooked.h  iheap.rs  lib.rs  main.c  migrate.c  migrator.rs  module.c  module.h  param.c  pebs.c  pebs.h  placement.c  rheap.c  rheap.h  sdh.c  sdh.h  sdh.rs  spsc.h  spsc.rs  vec.h
mm/nimble/: Kconfig  Makefile  mm_manage.c  nimble.h  shrink_lists.c  vmscan.c
rust/: Makefile  exports.c
rust/bindings/: bindings_helper.h
rust/kernel/: allocator.rs
rust/lazy_static/: core_lazy.rs
scripts/: Makefile.build  Makefile.lib  generate_rust_analyzer.py
tools/gups/: Cargo.toml
tools/gups/.cargo/: config.toml
tools/gups/src/: lib.rs
tools/hemem/: .gitignore  Makefile  envconst.h  fifo.c  fifo.h  (+18 more)
(+44 files in other folders)
